[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-sre-openenv"
version = "0.1.0"
description = "Production-Grade OpenEnv RL Environment for Agentic SRE"
readme = "README.md"
requires-python = ">=3.9"

# Tells the build system to automatically find your folders (like server/, mock_infra/, etc.)
[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "mock_infra*", "tasks*", "agents*", "graders*", "rag*"]